干支作成を共通化

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <body>
         <form>
             <table>
-                <tr><td>月</td><td>
-                    <select id="gekkan"></select>
-                    <select id="gessi"></select>
-                </td><td>月将</td><td><input type="text" id="gessyo" disabled="disabled"></input></td></tr>
-                <tr><td>日</td><td>
-                    <select id="nikkan"></select>
-                    <select id="nissi"></select>
-                </td><td>寄宮</td><td><input type="text" id="yorimiya" disabled="disabled"></input></td></tr>
+                <tr><td>月</td><td><div id="getu"></div></td><td>月将</td><td><input type="text" id="gessyo" disabled="disabled"></input></td></tr>
+                <tr><td>日</td><td><div id="niti"></div></td><td>寄宮</td><td><input type="text" id="yorimiya" disabled="disabled"></input></td></tr>
                 <tr><td>時</td><td><input type="text"></input></td><td>空亡</td><td><input type="text"></input></td></tr>
                 <tr><td>中節</td><td><input type="text"></input></td></tr>
             </table>
